# echoflow

./: .gitignore  CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: system.md
public/sounds/: CREDITS.txt  README.md
scripts/: release.ps1
src/: App.tsx  Overlay.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  db.rs  enhance.rs  export.rs  lib.rs  loadtest.rs  main.rs  mem.rs  models.rs  paths.rs  state.rs  text.rs  vad.rs  whisper.rs
src/components/: FirstRunModel.tsx  HistorySidebar.tsx  LanguageSwitcher.tsx  LevelMeter.tsx  ModeSwitcher.tsx  Onboarding.tsx  PromptView.tsx  RecordControl.tsx  RobotMascot.tsx  SettingsPanel.tsx  TranscriptView.tsx  UpdateBanner.tsx
src/dev/: MascotPreview.tsx
src/lib/: api.ts  format.ts  i18n.tsx  sound.ts  theme.ts  updater.ts
